--- a/index_1.html
+++ b/index_1.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 
-	<title>Dhairyashil Pisal | Reliance, Cloud Engineer | Dhairyashil.Pisal@ril.com</title>
+	<title>Dhairyashil Pisal | Reliance, Cloud Engineer | dpisal3552@gmail.com</title>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
 	<meta name="keywords" content="" />
@@ -78,21 +78,21 @@
 						</div>
 						<div class="yui-u">
 							<ul class="talent">
-								<li>XHTML</li>
-								<li>CSS</li>
-								<li class="last">Javascript</li>
+								<li>LINUX</li>
+								<li>SQL</li>
+								<li class="last">WINOOWS</li>
 							</ul>
 
 							<ul class="talent">
-								<li>Jquery</li>
-								<li>PHP</li>
-								<li class="last">CVS / Subversion</li>
+								<li>SHELL Script</li>
+								<li>PL-SQL</li>
+								<li class="last">Operation Orchestrator (Studio)</li>
 							</ul>
 
 							<ul class="talent">
-								<li>OS X</li>
-								<li>Windows XP/Vista</li>
-								<li class="last">Linux</li>
+								<li>AWS</li>
+								<li>GCP</li>
+								<li class="last">Azure</li>
 							</ul>
 						</div>
 					</div><!--// .yui-gf-->
@@ -107,8 +107,8 @@
 
 							<div class="job">
 								<h2>Reliance</h2>
-								<h3>Senior DevOps Engineer</h3>
-								<h4>2021-2024</h4>
+								<h3>Juunior DevOps Engineer</h3>
+								<h4>2022-2024</h4>
 								<p>Intrinsicly enable optimal core competencies through corporate relationships. Phosfluorescently implement worldwide vortals and client-focused imperatives. Conveniently initiate virtual paradigms and top-line convergence. </p>
 							</div>
 
@@ -123,7 +123,7 @@
 						</div>
 						<div class="yui-u">
 							<h2>VSBT, Baramati/h2>
-							<h3>Computer Engineer; <strong>4.0 GPA</strong> </h3>
+							<h3>Master in Science; <strong>65.48 %</strong> </h3>
 						</div>
 					</div><!--// .yui-gf -->
 
@@ -133,7 +133,7 @@
 		</div><!--// bd -->
 
 		<div id="ft">
-			<p>Dhairyashil &mdash; <a href="mailto:name@yourdomain.com">Dhairyashil.Pisal@ril.com</a> &mdash; (313) - 867-5309</p>
+			<p>Dhairyashil &mdash; <a href="mailto:name@yourdomain.com">dpisal3552@gmail.com/a> &mdash; (313) - 867-5309</p>
 		</div><!--// footer -->
 
 	</div><!-- // inner -->
